--- a/SERVERS/C2C/beef/docker-compose.yml
+++ b/SERVERS/C2C/beef/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3'
 services:
   beef:
     image: beef-xss
@@ -6,3 +7,10 @@ services:
       dockerfile: Dockerfile.beef
     ports:
       - 3000:3000
+    env_file:
+      ../ENVALL
+    networks:
+      - metasploit-framework_default
+networks:
+  metasploit-framework_default:
+    external: true
