--- a/SERVERS/C2C/beef/configs/beef.yaml
+++ b/SERVERS/C2C/beef/configs/beef.yaml
@@ -162,7 +162,7 @@ beef:
         network:
             enable: true
         metasploit:
-            enable: true
+            enable: false
         social_engineering:
             enable: true
         xssrays:
