--- a/SERVERS/C2C/docker-compose.yml
+++ b/SERVERS/C2C/docker-compose.yml
@@ -16,14 +16,14 @@ services:
   ms:
     image: metasploitframework/metasploit-framework:latest
     environment:
-      DATABASE_URL: postgres://postgres:password@db:5432/msf?pool=200&timeout=5
+      DATABASE_URL: postgres://postgres:pass@db:5432/msf?pool=200&timeout=5
     links:
       - db
     ports:
       - 4444:4444
       - 55552:55552
     volumes:
-      - ./msf-data:/home/msf/.msf6
+      - ./msf-data:/home/msf/.msf4
 
     env_file:
       ENVALL
