--- a/SERVERS/C2C/msf-data/config
+++ b/SERVERS/C2C/msf-data/config
@@ -1,6 +1,9 @@
 [framework/database/DI54IcOd]
 url=postgres:password@db:5432/msf?pool=200&timeout=5
 
+[framework/database/Gn4nrtGT]
+url=postgres:pass@db:5432/msf?pool=200&timeout=5
+
 [framework/database/RqdwL3k3]
 url=postgres:password@db:5432/msf?pool=200&timeout=5
 
