--- a/MACHINES/vagrants/attacker/Vagrantfile
+++ b/MACHINES/vagrants/attacker/Vagrantfile
@@ -57,6 +57,9 @@ Vagrant.configure("2") do |config|
      vb.memory = "1048"
      vb.cpus = "1"
    end
+  # Vagrant Plugins
+  config.vagrant.plugins = [ 'vagrant-disksize', 'vagrant-vbguest' ]
+
   #
   # View the documentation for the provider you are using for more
   # information on available options.
